--- a/ResumeReview/2starresume.html
+++ b/ResumeReview/2starresume.html
@@ -28,7 +28,7 @@
       align-items: center;
       padding: 1rem;
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      font-size: 42px;
+      font-size: 36px;
     }
 
     .menu-icon, .profile-icon {
@@ -58,7 +58,7 @@
     }
 
     .star {
-      font-size: 75px;
+      font-size: 70px;
       margin: 0 3px;
       color: gold;
     }
@@ -75,8 +75,8 @@
     }
 
     .tip-icon {
-      width: 125px;
-      height: 125px;
+        width: 125px;
+        height: 125px;
       margin: 10px auto;
     }
 
@@ -121,21 +121,24 @@
         </div>
       </div>
 
+      
       <img src="resumeicon copy.png" alt="Resume Icon" class="resume-icon" />
 
       <div class="stars">
         <div class="star">★</div>
         <div class="star">★</div>
-        <div class="star">★</div>
-        <div class="star">★</div>
         <div class="star gray">★</div>
-       
+        <div class="star gray">★</div>
+        <div class="star gray">★</div>
       </div>
 
-      <div class="message">ALMOST THERE!!</div>
+  
+      <div class="message">Needs Improvement!</div>
 
+  
       <img src="icons8-suggestions-64.png" class="tip-icon" alt="Tip Icon" />
     </div>
+
 
     <div class="button-container">
       <button class="btn">Upload</button>
@@ -143,7 +146,7 @@
     </div>
   </div>
 
+
   <img src="help copy.png" alt="Help Icon" class="help-icon" />
 </body>
 </html>
-
